feat: implement song search architecture and improve test environment
- Add SongService (sanitization) and YtDlpProvider (secure spawn)
- Implement for loop data-driven tests for robust sanitization
- Update docker-compose with source volumes for live-testing
- Enable terminal colors and storage persistence in test container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,14 @@ services:
 
   test:
     <<: *api-template
-    environment: 
-    - FORCE_COLOR=1
+    environment:
+      - FORCE_COLOR=1
     container_name: hearthtune_test
+    volumes:
+      - ./server/src:/app/src
+      - /app/storage/music
+      - /app/node_modules
+
     ports: []
     command: npm test -- --watchAll
     depends_on:
