--- a/server/package.json
+++ b/server/package.json
@@ -18,14 +18,19 @@
     "@types/jest": "^30.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^25.0.3",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@apollo/server": "^5.2.0",
+    "@as-integrations/express5": "^1.1.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "graphql": "^16.12.0",
     "mongoose": "^9.1.2"
   }
 }
