--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "esnext",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "moduleResolution": "bundler",
     "strict": true,
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
+      "@/common/*": [
+        "../common/*"
+      ],
       "@/*": [
         "src/*"
       ]
