--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "skipLibCheck": true,
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/common/*": [
+        "../common/*"
+      ],
+      "@/*": [
+        "src/*"
+      ]
+    }
   }
 }
